Enhance seed management by adding new attributes in default.project.json, implementing seed planting logic in SeedService, and refining tool attributes in InventoryService for improved gameplay mechanics.

--- a/default.project.json
+++ b/default.project.json
@@ -39,19 +39,34 @@
            "DisplayName": {
             "$className": "StringValue"
            },
+           "SeedPrefix": {
+            "$className": "StringValue"
+           },
            "Icon": {
             "$className": "StringValue"
+           },
+           "GrowthTime": {
+            "$className": "NumberValue"
+           },
+           "HarvestCount": {
+            "$className": "IntValue"
+           },
+           "MultiHarvest": {
+            "$className": "BoolValue"
+           },
+           "HarvestInterval": {
+            "$className": "IntValue"
            },
            "Server": {
             "$className": "Folder",
             "CurrentStock": {
             "$className": "IntValue"
-            },
+           },
             "MaxStock": {
             "$className": "IntValue"
-            }
+           }
           }
-          }
+         }
         }
       }
     },
